New in CVS version:

  * Additions to projwfc: k-resolved DOS, LDOS integrated in selected
    real-space regions
  * Constant-volume variable-cell optimization
  * Non-colinear and spin-orbit PAW
  * Penalty functional technique in DFT+U calculations (CP only)

Incompatible changes in CVS version:

  * pw.x no longer performs NEB calculations. NEB is now computed
    by a separate code, NEB/neb.x
  * NEB for cp.x no longer available
  * iq1,iq2,iq3 removed from input in ph.x; use start_q, last_q instead

Fixed in CVS version:

  * CP: Input external pressure is in KBar and not in GPa like it was
    formerly in CP. Input value for variable "press" in cell namelist
    should be given in KBar as stated in the documentation!
  * CP: incorrect stress calculated in the spin-polarized case 
  * PW: corrected an old bug for Berry's phase finite electric field 
        calculations with non-orthorombic simulation cells.

Fixed in version 4.2.1:

  * CP: problem in electronic forces with OpenMP parallelization
  * real-space Q functions (tqr=.true.) not working in noncollinear case
  * XC potential in CP was not initialized when condition (rho > 10^(-30)) 
    was not satisfied; this is usually harmless but potentially dangerous
  * CP could not read data written from PW in spin-polarized cases
  * In at least some cases, the cpmd2upf was yielding incorrect PPs
  * support for MKL incomplete (only in packaged version, not in cvs)
  * glitch in pw2wannier if / missing at the end of outdir
  * linking error when compiling qexml
  * misc problems in plotband.f90
  * the new G-space symmetrization was not working properly 
    for the magnetization in the noncollinear case
  * CP: incorrect results in parallel execution if the card K_POINTS
    was present in input and contained a point different from Gamma
  * D3: Fermi energy shift was only symmetrized on the sub-set of the
    symmetry operations that leave q unchanged.