@@ -206,9 +206,6 @@ cegterg.o : ../Modules/kind.o
 cegterg.o : ../Modules/mp.o
 cegterg.o : ../Modules/mp_global.o
 cegterg.o : ../Modules/ptoolkit.o
-cegterg_x.o : ../Modules/kind.o
-cegterg_x.o : ../Modules/mp.o
-cegterg_x.o : ../Modules/mp_global.o
 clean_pw.o : ../Modules/atom.o
 clean_pw.o : ../Modules/constraints_module.o
 clean_pw.o : ../Modules/control_flags.o
@@ -554,6 +551,11 @@ gen_us_vkb0.o : ../Modules/kind.o
 gen_us_vkb0.o : ../Modules/splinelib.o
 gen_us_vkb0.o : ../Modules/uspp.o
 gen_us_vkb0.o : pwcom.o
+generate_vdW_kernel_table.o : ../Modules/constants.o
+generate_vdW_kernel_table.o : ../Modules/io_global.o
+generate_vdW_kernel_table.o : ../Modules/kind.o
+generate_vdW_kernel_table.o : ../Modules/mp.o
+generate_vdW_kernel_table.o : ../Modules/mp_global.o
 get_locals.o : ../Modules/cell_base.o
 get_locals.o : ../Modules/griddim.o
 get_locals.o : ../Modules/ions_base.o
@@ -726,6 +728,7 @@ input.o : ../iotk/src/iotk_module.o
 input.o : a2fmod.o
 input.o : dynamics_module.o
 input.o : exx.o
+input.o : kernel_table.o
 input.o : martyna_tuckerman.o
 input.o : ms2.o
 input.o : noncol.o
@@ -754,6 +757,9 @@ iweights.o : ../Modules/kind.o
 iweights.o : ../Modules/mp.o
 iweights.o : ../Modules/mp_global.o
 iweights.o : noncol.o
+kernel_table.o : ../Modules/constants.o
+kernel_table.o : ../Modules/io_files.o
+kernel_table.o : ../Modules/kind.o
 kpoint_grid.o : ../Modules/input_parameters.o
 kpoint_grid.o : ../Modules/io_global.o
 kpoint_grid.o : ../Modules/kind.o
@@ -1397,6 +1403,12 @@ stres_loc.o : ../Modules/wavefunctions.o
 stres_loc.o : noncol.o
 stres_loc.o : pwcom.o
 stres_loc.o : scf_mod.o
+stres_nonloc_dft.o : ../Modules/funct.o
+stres_nonloc_dft.o : ../Modules/griddim.o
+stres_nonloc_dft.o : ../Modules/kind.o
+stres_nonloc_dft.o : ../Modules/mp.o
+stres_nonloc_dft.o : ../Modules/mp_global.o
+stres_nonloc_dft.o : xc_vdW_DF.o
 stres_us.o : ../Modules/constants.o
 stres_us.o : ../Modules/control_flags.o
 stres_us.o : ../Modules/ions_base.o
@@ -1538,6 +1550,7 @@ v_of_rho.o : martyna_tuckerman.o
 v_of_rho.o : noncol.o
 v_of_rho.o : pwcom.o
 v_of_rho.o : scf_mod.o
+v_of_rho.o : xc_vdW_DF.o
 vcsmd.o : ../Modules/cell_base.o
 vcsmd.o : ../Modules/constants.o
 vcsmd.o : ../Modules/control_flags.o
@@ -1639,3 +1652,19 @@ write_ns.o : ../Modules/kind.o
 write_ns.o : pwcom.o
 write_ns.o : scf_mod.o
 wsweight.o : ../Modules/kind.o
+xc_vdW_DF.o : ../Modules/cell_base.o
+xc_vdW_DF.o : ../Modules/constants.o
+xc_vdW_DF.o : ../Modules/control_flags.o
+xc_vdW_DF.o : ../Modules/fft_base.o
+xc_vdW_DF.o : ../Modules/fft_interfaces.o
+xc_vdW_DF.o : ../Modules/fft_scalar.o
+xc_vdW_DF.o : ../Modules/griddim.o
+xc_vdW_DF.o : ../Modules/input_parameters.o
+xc_vdW_DF.o : ../Modules/io_global.o
+xc_vdW_DF.o : ../Modules/kind.o
+xc_vdW_DF.o : ../Modules/mp.o
+xc_vdW_DF.o : ../Modules/mp_global.o
+xc_vdW_DF.o : ../Modules/wavefunctions.o
+xc_vdW_DF.o : kernel_table.o
+xc_vdW_DF.o : pwcom.o
+xc_vdW_DF.o : scf_mod.o
