@@ -10,7 +10,8 @@ TODO LIST - November 2010
   0.6  Numerical instabilities with BLYP and TPSS
 
 1) Organization
-
+1.0 Binary packages
+  1.0.0 At least Debian/RPM for Linux ?
 1.1 www.quantum-espresso.org:
   1.1.0 Better download page that allows selection of packages
         (see 1.3.0)
@@ -104,17 +105,16 @@ TODO LIST - November 2010
 4.1  New developments to be added (sooner or later):
   4.1.1 Moka structure builder + new xml input/output (RS)
   4.1.2 XMCD in XSpectra
-  4.1.3 vdW with nonlocal xc functional
-        [ will require a better way to label XC functionales.
-          The current one dates back to the times when people were 
-          experimenting and mix-and-matching different functionals
-          for X, Cor, gradient corrections to X and Cor. This is
-          clumsy, but not easy to extend to newer functionals, and 
-          nobody really uses it, since there are well-defined labels:
-          PW91, PBE, B3LYP etc, taht do the job. We should convert 
-          this mess, with the associated 4-index code, into a simpler 
-          system, without losing compatibility with existing PPs ]
-          
+  4.1.3 The new vdW with nonlocal xc functional requires a better way 
+        to label XC functionals. The current one dates back to the times
+        when people were experimenting and mix-and-matching different 
+        functionals for X, Cor, gradient corrections to X and Cor. This 
+        is clumsy, but not easy to extend to newer functionals, and 
+        nobody really uses it, since there are well-defined labels:
+        PW91, PBE, B3LYP etc, that do the job. We should convert this
+        mess, with the associated 4-index code, into a simpler 
+        system, without losing compatibility with existing PPs which
+        are still labeled with the old convention.
   4.1.4 new GWW (GWL)
   4.1.5 EPW (electron-phonon with Wannier stuff): released, 
         has to be aligned with CVS version
@@ -127,7 +127,9 @@ TODO LIST - November 2010
   4.1.0 Wannier-based exact-exchange in PW (to be done)
 
 4.2 Small new developments, desirable or to be added:
-  4.2.0 single-q calculation of electron-phonon coefficients
+  4.2.0 Fermi energy in insulators (tetrahedron method) should either be 
+        at the top of the valence band or in the middle of the gap; now
+        it is sometimes at the bottom of the conduction band (Eduardo)
   4.2.1 configure issues:
         - ifort+acml
         - ifort+mkl+scalapack troubles
